# nlp_rag_proj

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  submission_kaggle.csv
data/emb/: emb_dict_docs.pickle
data/raw/: README.txt
docs/: data-leakage.md  embeddings.md  overfitting.md  parameters-vs-hyperparameters.md  precision-recall.md  rag.md  random-forest-vs-tree.md  stemming-lemmatization.md  svm.md  tfidf.md  tokenization.md  zero-shot-ttft.md
models/: lem_tfidf_lr.joblib  lem_tfidf_svc.joblib  lem_tfidf_svc_nl.joblib  stem_tfidf_svc.joblib  stem_tfidf_svc_nl.joblib  test.joblib  tfidf_svc.joblib  tfidf_svc_nl.joblib
notebooks/: 01_eda.ipynb
outputs/: lem_tfidf_lr.csv  lem_tfidf_svc.csv  lem_tfidf_svc_nl.csv  stem_tfidf_svc.csv  stem_tfidf_svc_nl.csv  submission_kaggle.csv
src/nlp_rag_proj/: __init__.py  clean.py  features.py  io.py  parrallel.py  predict.py  rag.py  sample.py  tokenization.py  train.py
tests/: test_clean.py  test_features.py  test_rag.py  test_train.py
