[project]
name = "nlp-rag-proj"
version = "0.1.0"
description = "Projekt NLP - dane z artykulow BBC"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "kaggle>=2.2.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pytest>=9.1.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "spacy[cuda124]>=3.8.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
