[project]
name = "nlp-rag-proj"
version = "0.2.0"
description = "Projekt NLP - dane z artykulow BBC"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "absl-py",
    "click>=8.4.1",
    "cupy-cuda12x>=14.1.1",
    "ipykernel>=7.3.0",
    "kaggle>=2.2.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pystemmer>=3.1.0",
    "pytest>=9.1.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.14",
    "spacy-transformers>=1.4.0",
    "torch>=2.10.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
