[project]
name = "nlp-rag-proj"
version = "0.2.0"
description = "Projekt NLP - dane z artykulow BBC"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.1",
    "cupy-cuda12x>=14.1.1",
    "en-core-web-trf",
    "faiss-cpu>=1.14.3",
    "ipykernel>=7.3.0",
    "kaggle>=2.2.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "pandas>=3.0.3",
    "pystemmer>=3.1.0",
    "pytest>=9.1.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.6.0",
    "spacy>=3.8.14",
    "spacy-transformers>=1.4.0",
    "torch>=2.10.0",
    "zstd>=1.5.7.3",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
en-core-web-trf = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.8.0/en_core_web_trf-3.8.0-py3-none-any.whl" }
